[package]
name = "dnfsoslow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
futures-util = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
